# tf-m-tests

./: .gitattributes  .gitignore  .gitreview  CMakeLists.txt  license.rst  readme.rst
CMSIS/: CMakeLists.txt  README
app_broker/: CMakeLists.txt  main_ns.c  os_config_cmsis_rtx.c  os_wrapper_cmsis_rtos_v2.c  test_app.h
app_broker/CMSIS/: CMakeLists.txt  README
app_broker/log/: CMakeLists.txt
app_broker/multi_core/: CMakeLists.txt
app_broker/nsid_manager/: CMakeLists.txt  tz_stub.c
app_broker/os_wrapper/: CMakeLists.txt
app_ns_test/: CMakeLists.txt  test_app.c
app_test_psa_arch/: CMakeLists.txt
erpc/server/app/: CMakeLists.txt
erpc/tfm_reg_tests/: CMakeLists.txt  main_host.c
lib/ext/: CMakeLists.txt
lib/ext/CMSIS/: CMakeLists.txt
lib/ext/qcbor/: CMakeLists.txt
lib/ext/t_cose/: CMakeLists.txt
lib/log/: CMakeLists.txt  tfm_log.h  tfm_log_raw.c
log/: CMakeLists.txt
ns_interface/: CMakeLists.txt
ns_interface/ns_client_ext/: CMakeLists.txt  tfm_nsid_manager.h  tz_shim_layer.c
test/: CMakeLists.txt  secure_tests.cmake
test/bl1/: CMakeLists.txt
test/bl1/bl1_1/: CMakeLists.txt  bl1_1_suites.c
test/bl1/bl1_2/: CMakeLists.txt  bl1_2_suites.c
test/bl2/: CMakeLists.txt
test/bl2/mcuboot/: CMakeLists.txt
test/config/: check_config.cmake  default_ns_test_config.cmake  default_s_test_config.cmake  default_test_config.cmake  set_config.cmake
test/config/profile/: profile_large_test.cmake  profile_medium_arotless_test.cmake  profile_medium_test.cmake  profile_small_test.cmake
test/framework/: non_secure_suites.c  secure_suites.c  test_framework.c  test_framework.h  test_framework_helpers.h  test_framework_integ_test_helper.c  test_log.h
test/secure_fw/: CMakeLists.txt  non_secure_suites.c  secure_suites.c  secure_tests.cmake  tfm_test_manifest_list.yaml
test/secure_fw/common_test_services/tfm_secure_client_2/: CMakeLists.txt  tfm_secure_client_2.c
test/secure_fw/common_test_services/tfm_secure_client_service/: CMakeLists.txt  (+1 more)
test/secure_fw/suites/: CMakeLists.txt
test/secure_fw/test_services/: CMakeLists.txt  tfm_test_manifest_list.yaml
test/suites/: CMakeLists.txt
test/suites/attestation/: CMakeLists.inc  CMakeLists.txt  attest_public_key.c
test/suites/audit/: CMakeLists.txt
test/suites/core/: CMakeLists.txt
test/suites/crypto/: CMakeLists.txt  crypto_tests_common.c  crypto_tests_common.h
test/suites/fpu/: fpu_tests_common.c  fpu_tests_common.h
test/suites/ipc/: CMakeLists.txt
test/suites/irq/: CMakeLists.txt  irq_testsuite.c
test/suites/its/: CMakeLists.txt
test/suites/nsid/: nsid_testsuite.c
test/suites/platform/: CMakeLists.txt
test/suites/ps/: CMakeLists.txt
test/suites/qcbor/: CMakeLists.txt
test/suites/sfn/: CMakeLists.txt
test/suites/spm/: CMakeLists.txt
test/suites/t_cose/: CMakeLists.txt
test/test_services/: CMakeLists.inc  CMakeLists.txt  tfm_test_manifest_list.yaml  tfm_test_sfn_manifest_list.yaml
test/test_services/tfm_attest_test_service/: CMakeLists.txt  tfm_attest_test_service.c
test/test_services/tfm_core_test/: CMakeLists.txt  core_test_defs.h  tfm_ss_core_test.c  tfm_ss_core_test.yaml
test/test_services/tfm_core_test_2/: CMakeLists.txt  tfm_ss_core_test_2.c
test/test_services/tfm_flih_test_service/: CMakeLists.txt
test/test_services/tfm_fpu_service/: CMakeLists.txt
test/test_services/tfm_ipc_client/: CMakeLists.txt  tfm_ipc_client_test.yaml
test/test_services/tfm_ipc_service/: CMakeLists.txt  tfm_ipc_service_test.c
test/test_services/tfm_irq_test_service_1/: CMakeLists.txt
test/test_services/tfm_multi_core_test/: CMakeLists.txt
test/test_services/tfm_ps_test_service/: CMakeLists.txt
test/test_services/tfm_secure_client_2/: CMakeLists.txt  tfm_secure_client_2.c  tfm_secure_client_2.yaml
test/test_services/tfm_secure_client_service/: CMakeLists.txt  tfm_secure_client_service.c  tfm_secure_client_service.yaml
test/test_services/tfm_slih_test_service/: CMakeLists.txt
test/test_services/tfm_spm_test/: CMakeLists.txt
test/test_services/tfm_test_sfn_partitions/: CMakeLists.txt
tests_psa_arch/: CMakeLists.txt  test_app.c
tests_psa_arch/fetch_repo/: 0001-Place-crypto-test-16-at-the-beginning-of-the-test.patch  0002-Crypto-Add-psa-crypto-config-link-for-crypto-tests.patch  0003-Build-Add-manifest-tool-dependencies.patch  0004-Add-msp4-target-config-for-Corstone-315-and-320.patch  0004-Attest-Use-designated-initializers.patch  0005-Add-rp2350-platform.patch  0005-Rename-cs3x0-to-mps3.patch  0006-Attest-Use-designated-initializers.patch  0007-Fix_buffer_overflow_in_test_c06163c.patch  0008-Use-rsa_128_key_data-which-has-expected-formate.patch  0009-Update-Musca-S1-B1-platform-configuration.patch  0010-Add-multiple-expected-return-statuses-in-case-of-inv.patch  CMakeLists.txt
tests_psa_arch/spe/: CMakeLists.txt  config_spe.cmake  tfm_psa_ff_test_manifest_list.yaml
tests_psa_arch/spe/config/: check_config.cmake  config_ns_test_psa_api.cmake.in  config_test_psa_api.cmake  config_test_psa_api.h
tests_psa_arch/spe/partitions/: CMakeLists.txt
tests_reg/: CMakeLists.txt  test_app.c
tests_reg/spe/: CMakeLists.txt
tests_reg/spe/config/: config_ns_test.cmake.in  config_spe.cmake.in  default_config.cmake  enable_dep_config.cmake  profile_default_config.cmake  set_config.cmake
tests_reg/test/: CMakeLists.txt
tests_reg/test/bl1/: CMakeLists.txt
tests_reg/test/bl2/: CMakeLists.txt
tests_reg/test/config/: check_config.cmake  config.cmake  config_ns_test.cmake.in  default_ns_test_config.cmake  default_s_test_config.cmake  default_test_config.cmake  enable_dep_config.cmake
tests_reg/test/framework/: CMakeLists.txt  test_framework.c  test_framework.h  test_framework_helpers.c  test_framework_integ_test_helper.c  test_log.h
tests_reg/test/ns_regression/: CMakeLists.txt  non_secure_suites.c  non_secure_suites.h
tests_reg/test/secure_fw/: CMakeLists.txt  tfm_test_manifest_list.yaml
tests_reg/test/secure_regression/: CMakeLists.txt  secure_fw.cmake  secure_suites.c  secure_suites.h
tests_reg/utils/: regression_flag_parse.cmake  test_suite_utils.cmake
(+296 files in other folders)
